market swagger
